<resources>
    <string name="app_name">WSC Automation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="products">Products</string>
    <string name="balance">Balance</string>
    <string name="organization">Organization</string>
    <string name="promotions">Promotions</string>
    <string name="payments">Payments</string>
    <string name="drawer_header_text">HotWax Systems</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>

</resources>
