<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_menu_products"
            android:title="@string/products" />
        <item
            android:id="@+id/nav_balance"
            android:icon="@drawable/ic_menu_balance"
            android:title="@string/balance" />
        <item
            android:id="@+id/nav_organization"
            android:icon="@drawable/ic_menu_organization"
            android:title="@string/organization" />

        <item
            android:id="@+id/nav_promotions"
            android:icon="@drawable/ic_menu_promotions"
            android:title="@string/promotions" />

        <item
            android:id="@+id/nav_payments"
            android:icon="@drawable/ic_menu_payments"
            android:title="@string/payments" />
    </group>

</menu>
